Correction gap droite responsive

--- a/style.css
+++ b/style.css
@@ -1216,6 +1216,7 @@ button.btn-cours:focus {
 * {
   margin: 0;
   padding: 0;
+  max-width: 100vw;
 }
 
 html {
@@ -1406,7 +1407,7 @@ html {
     margin: 3rem 0 3rem 0;
   }
   .contenu-image-description {
-    width: 60%;
+    width: 100%;
     height: auto;
   }
 }
